Always attach timeupdatehandler, and minor CSS alignment fix

--- a/src/components/MediaPlayer/VideoJS/components/styles/VideoJSProgress.scss
+++ b/src/components/MediaPlayer/VideoJS/components/styles/VideoJSProgress.scss
@@ -8,7 +8,7 @@
   min-width: 4em;
   touch-action: none;
   height: 1em;
-  margin-top: 1.3em;
+  margin-top: 1.1em;
 }
 
 .vjs-progress-holder {
